<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView 
        android:textStyle="bold"
        android:textColor="#fff"
        android:id="@+id/textView2"
        android:paddingLeft="3dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cms_option_chose"/>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checksingle"
            android:paddingLeft="3dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cb_single_site"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="15dp"
            android:id="@+id/site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="http://www.domain.com"
            android:layout_weight="1"/>
        <Spinner
            android:entries="@array/cms_array"
            android:id="@+id/spinner1"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:prompt="@string/cms_prompt"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkmultiple"
            android:paddingLeft="3dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cb_multiple_sites"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:enabled="false"
            android:textSize="15dp"
            android:ellipsize="end"
            android:layout_gravity="end"
            android:id="@+id/sites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="/sdcard/file.txt"
            android:maxLines="1"
            android:lines="1"
            android:scrollHorizontally="true"
            android:layout_weight="1"
            android:inputType="text"/>
        <Spinner
            android:entries="@array/cms_array"
            android:id="@+id/spinner2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:prompt="@string/cms_prompt"/>
        <Button
            android:id="@+id/buttonbrowse"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="..."
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="12dp"
            android:gravity="bottom"
            android:textColor="#ffffff"
            android:id="@+id/outputView"
            android:background="@drawable/console_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/consoletext"
            android:layout_above="@+id/buttonscan"/>
        <Button
            android:id="@+id/buttonscan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cms_scann"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>
