<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:padding="10dp"
                android:orientation="vertical">

                <ImageView          
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:id="@+id/iv_srs"
                    android:src="@drawable/devs_srs" />

            </LinearLayout>
            

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_card_margin_horizontal"
                android:layout_marginTop="@dimen/main_card_margin_vertical"
                android:layout_marginRight="@dimen/main_card_margin_horizontal"
                android:layout_marginBottom="@dimen/main_card_margin_vertical"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@color/bgCardView"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rl_developer"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/img_card_about_1"
                        android:layout_width="64dp"
                        android:padding="10dp"
                        android:layout_height="128dp"
                        android:background="@color/bgImage"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_launcher_round" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/card_title_margin"
                        android:layout_marginEnd="@dimen/text_margin"
                        android:layout_toEndOf="@id/img_card_about_1">

                        <TextView
                            android:id="@+id/tv_card_about_1_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_dev_title"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_about_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_dev_summary"
                            android:layout_below="@id/tv_card_about_1_1"
                            android:textColor="@android:color/white"
                            android:layout_marginTop="@dimen/text_margin_small"
                            android:lineSpacingExtra="@dimen/text_margin_small"
                            android:textStyle="italic" />

                    </RelativeLayout>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_about_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_card_margin_horizontal"
                android:layout_marginTop="@dimen/main_card_margin_vertical"
                android:layout_marginRight="@dimen/main_card_margin_horizontal"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/bgCardView"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_card_about_2_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_margin"
                        android:text="@string/about_information"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/view_card_about_2_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorAccent" />

                    <LinearLayout
                        android:id="@+id/cv_about_github"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:src="@drawable/ic_about_github" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:textColor="@android:color/white"
                            android:text="@string/about_dev_github"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cv_about_source_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:src="@drawable/ic_source_code" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:text="@string/about_source_code"
                            android:textColor="@android:color/white"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cv_about_licenses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:src="@drawable/ic_about_licenses" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:text="@string/about_licenses"
                            android:textColor="@android:color/white"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cv_about_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:src="@drawable/ic_about_app" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:textColor="@android:color/white"
                            android:text="@string/about_app"
                            android:textStyle="italic" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>

